--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
       <script src="paper.js"></script>
       <script src="dustBin.js"></script>
       <script src="sketch.js"></script>
+      <script src="matter.js"></script>
 
     </head>
     <body>
